samples/_failures_safe/1761724038_375168_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27d9ca17.c: In function ‘main’:
./samples/SAFE/__tmp_27d9ca17.c:190:5: error: expected declaration or statement at end of input
  190 |     dfs(&g, start);
      |     ^~~
